Push full project tree including venv, data, and artifacts.